# devfetch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-cross-platform.yml
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: cli.rs  collect.rs  format.rs  jsonlite.rs  lib.rs  main.rs  model.rs  presets.rs  util.rs
tests/: cli_parity.rs  util_parity.rs
